cargo nuevamente las ímágenes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
     <div class="card-group">
         <div class="card">
-          <img src="../Bootstrap/imagenhtml.JPG" class="card-img-top" alt="...">
+          <img src="imagenhtml.JPG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">titulo 1</h5>
             <p class="card-text"> Contenido de Card</p>
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="../Bootstrap/imagencss.JPG" class="card-img-top" alt="...">
+          <img src="imagencss.JPG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">titulo 2</h5>
             <p class="card-text">Contenido de Card</p>
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="../Bootstrap/imagenbootstrap.JPG" class="card-img-top" alt="...">
+          <img src="imagenbootstrap.JPG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">titulo 3</h5>
             <p class="card-text">Contenido de Card</p>
